[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/source-code-pro/SourceCodeProBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/source-code-pro/SourceCodeProBlack.tres" type="DynamicFont" id=2]
[ext_resource path="res://Dialog.gd" type="Script" id=3]
[ext_resource path="res://TLabel.tscn" type="PackedScene" id=4]

[node name="Dialog" type="PanelContainer"]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Details"]
margin_right = 1010.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = "Confirm"
align = 1

[node name="Info" type="Label" parent="Details"]
margin_top = 81.0
margin_right = 1010.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Info"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Details"]
margin_top = 111.0
margin_right = 1010.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" parent="Details/MarginContainer" instance=ExtResource( 4 )]

[node name="ControlButtons" type="HBoxContainer" parent="Details"]
margin_top = 566.0
margin_right = 1010.0
margin_bottom = 586.0
grow_vertical = 2
alignment = 1

[node name="Ok" type="Button" parent="Details/ControlButtons"]
margin_right = 503.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="Details/ControlButtons"]
margin_left = 507.0
margin_right = 1010.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "CANCEL"

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Details/ControlButtons/Ok" to="." method="_on_pause_popup_ok_pressed"]
[connection signal="pressed" from="Details/ControlButtons/Cancel" to="." method="_on_pause_popup_cancel_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_long_pause"]
